<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_picker"/>

        <TextView
            android:id="@+id/text_view_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_temperature_label"
            android:layout_below="@id/time_picker"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/date_picker"/>

        <NumberPicker
            android:id="@+id/number_picker_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_temperature"
            android:layout_alignStart="@+id/date_picker"/>

        <TextView
            android:id="@+id/text_view_vitesse_vent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_vitesse_vent_label"
            android:layout_below="@id/time_picker"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@id/number_picker_vitesse_vent"/>

        <NumberPicker
            android:id="@+id/number_picker_vitesse_vent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_vitesse_vent"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text_view_etat_ciel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_viex_etat_ciel_label"
            android:layout_below="@+id/number_picker_temperature"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/date_picker"/>

        <RadioGroup
            android:id="@+id/radio_group_ciel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_etat_ciel"
            android:layout_alignStart="@+id/date_picker">

            <RadioButton
                android:id="@+id/radio_button_degage"
                android:text="@string/radio_button_degage_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radio_button_couvert"
                android:text="@string/radio_button_couvert_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radio_button_pluvieux"
                android:text="@string/radio_button_pluvieux_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_ciel"
            android:layout_alignStart="@+id/date_picker"
            android:text="@string/button_ok_label"/>

        <Button
            android:id="@+id/button_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group_ciel"
            android:layout_alignEnd="@+id/date_picker"
            android:text="@string/button_retour_label"/>

    </RelativeLayout>

</ScrollView>